--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -246,10 +246,10 @@ a {
     justify-content: space-between;
 }
 .featured .desc {
-    color: #5a6473;
-    font-size: 1.6rem;
-    font-weight: 400;
-    line-height: 30px; /* 187.5% */
+    color: #a3a6ab;
+    font-size: 1.4rem;
+    font-weight: 500;
+    line-height: 1.5;
 }
 .featured .link {
     color: #0689ff;
